lang/src/ast/snapshots/rain_lang__ast__parser__test__closure.snap
---
source: lang/src/ast/parser.rs
expression: "parse_display_expr(\"fn () {}\")"
---
AnonymousFnDeclare(
 Args(
 )
 Block(
 )
)
