lang/src/ast/snapshots/rain_lang__ast__parser__test__closure_args.snap
---
source: lang/src/ast/parser.rs
expression: "parse_display_expr(\"fn (a: A, b: B) { 5 }(a, b)\")"
---
FnCall(
 AnonymousFnDeclare(
  Args(
   a
   TypeSpec(
    Ident(
     A
    )
   )
   b
   TypeSpec(
    Ident(
     B
    )
   )
  )
  Block(
   IntegerLiteral(
    5
   )
  )
 )
 Ident(
  a
 )
 Ident(
  b
 )
)
